auth_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: us-central1-docker.pkg.dev/upbeat-beach-430205-r4/auth/msalab01/auth:v2
        ports:
        - containerPort: 8000
