todo_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: us-central1-docker.pkg.dev/upbeat-beach-430205-r4/todo/msalab01/todo:v5
        ports:
        - containerPort: 5000
