web_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: us-central1-docker.pkg.dev/upbeat-beach-430205-r4/web/msalab01/web:v2
        ports:
        - containerPort: 80
