tododb_service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-todo
  labels:
    app: postgres-todo
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres-todo
